[package]
name = "solana-exporter"
description = "Prometheus exporter for the Solana validator"
version = "0.4.2"
authors = [
    "Vladimir Komendantskiy <komendantsky@gmail.com>",
    "Anson Cheung <git@anson-cheung.com>"
]
repository = "https://github.com/rustiqtech/solana-exporter"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
clap = { version = "^2.33.3", features = ["yaml"] }
env_logger = "^0.8.3"
log = "^0.4"
prometheus_exporter = "^0.8"
solana-client = "4.0.0"
# Import granular crates at the versions the solana-client 4.0.0 tree uses,
# rather than the solana-sdk umbrella (whose pinned solana-account/solana-pubkey
# differ from what the RPC client returns, causing type-version conflicts).
solana-account = "3.4.0"
solana-pubkey = "3.0.0"
solana-clock = "3.1.0"
solana-epoch-info = "3.1.0"
sled = "^0.34.6"
bincode = "^1.3.3"
serde = { version = "^1.0.126", features = ["derive"] }
reqwest = { version = "^0.11.3", features = ["json"] }
time = { version = "^0.2.26", features = ["serde"] }
geoip2-city = { version = "^0.1.0", features = ["serde_support"] }
anyhow = "^1.0.40"
tokio = "^1.6.0"
futures = "^0.3.15"
dirs = "^3.0.2"
semver = "^1.0.0"
toml = "^0.5.8"
solana-transaction-status-client-types = "4.0.0"
solana-reward-info = "5.0.0"
solana-stake-interface = "2.0.2"

[dependencies.console]
version = "0.16.0"
features = ["std"]
